--- a/notes/TODO.txt
+++ b/notes/TODO.txt
@@ -1,1 +1,3 @@
 06:28 AM 08/17/2011   TODO: When club not set, members and meetings don't work.  Structural issue that should be caught with rethink.
+07:25 AM 08/17/2011   TODO: Research auto reload for CSS building
+                      TODO: Notify when bad logon - right now there's nothing.  
